-- What's new for ??????

New Searches

* 

Modified Searches

* acine - added /video switch
* thw - updated the search (the form changed on the site) and added /category switch
* ups - now allows spaces in tracking number(s)

Enhancements

* 

Bug Fixes

* 


-- What's new for 3.0.0.20 (beta)

New Searches

* newsau - Search for news topics at news.com.au, from Steve Lin
* hv - Rex Swain's HTTP Viewer; See exactly what an HTTP request returns to your browser
* law - FindLaw Law Library from John W. Bairen, Jr.
* dicit - Italian dictionary + Italian-English dictionary from Tom Creek
* acine - Search allocine.com, THE french site about movies, stars, theaters schedules, critics, trailers, etc...

Modified Searches

* 

Enhancements

* Modified update check to display a message box if there
  was an error (e.g., no internet) and there was an explicit
  check.
* Italian holidays thru 2020 from Tom Creek

Bug Fixes

* updated the link to the FAQ in the about box.


-- What's new for 3.0.0.19 (beta)

New Searches

* rot13 - Glenn add a rot13 converter function
* gfaq - GameFAQs.com from Casper Kvan Clausen
* ulwhois - whois information from whois.userland.com

Modified Searches

* gg - MLL added /news and more language switches (type "gg ?")
* setiq - MLL added warning to description about password retention
* so - Non-digits characters are removed form the search string

Enhancements

* Sean Farrell added Microsoft Outlook option for calendar
* 2002 Italian holidays from Tom Creek
* 2002-2020 French holidays
* 2002-2005 Australia NSW holidays from Steve Lin
* Added check for newer version

Bug Fixes

* Will fixed problem with leading zeros in XML holiday files


-- What's new for 3.0.0.18 (beta)

New Searches

* yp - Yellow pages search from Tim Danner
* setiq - Login as an admin to your setiqueue web admin interface - from MLL

Modified Searches

* qsfind - Changed to display a popup window instead of an alert dialog when
           no match is found.